I am doing the modal code

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <meta name="x:title" content="Diseños Vias Y Pavimentos | Interventoría y Consultoría en Ingeniería Vial" >
     <meta name="x:image" content="https://i.postimg.cc/W4dbZwN2/Dvp-logo-recortado.jpg">
     <meta name="x:url" content="https://dvp.com.co/">
-    <meta property="og:description" content="Hola bienvenid@ a dvp, Diseños Vias Y Pavimentos | Interventoría y Consultoría en Ingeniería Vial">
-    <meta name="twitter:description" content="Hola bienvenid@ a dvp, Diseños Vias Y Pavimentos | Interventoría y Consultoría en Ingeniería Vial">
+    <meta property="og:description" content="DVP: Expertos en ingeniería en Colombia. Ofrecemos diseño vial, interventoría de obras y análisis de suelos. Contáctanos para soluciones especializadas con un equipo de especialistas cualificados.">
+    <meta name="twitter:description" content="DVP: Expertos en ingeniería en Colombia. Ofrecemos diseño vial, interventoría de obras y análisis de suelos. Contáctanos para soluciones especializadas con un equipo de especialistas cualificados.">
     <meta name="og:type" content="website">
     <link rel="apple-touch-icon" sizes="57x57" href="https://i.postimg.cc/kXPRW4h0/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="https://i.postimg.cc/XJyXCSKN/apple-icon-60x60.png">
@@ -204,10 +204,10 @@
 
             <article class="card card__transition ">
 
-                <a href="" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="./arroyo91.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                 <div class="card__info ">
-                    <a href="" class="card__infoContent">
+                    <a href="./arroyo91.html" class="card__infoContent">
 
                         <h2 class="card__h2" >Interventoría</h2>
 
@@ -223,10 +223,10 @@
 
             <article class="card card card__transition">
 
-                <a href="" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="#" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                 <div class="card__info ">
-                    <a href="" class="card__infoContent">
+                    <a href="#" class="card__infoContent">
 
                         <h2 class="card__h2" >Interventoría</h2>
 
@@ -242,10 +242,10 @@
 
             <article class="card card card__transition">
 
-                <a href="" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="#" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                 <div class="card__info ">
-                    <a href="" class="card__infoContent">
+                    <a href="#" class="card__infoContent">
 
                         <h2 class="card__h2" >Interventoría</h2>
 
@@ -261,10 +261,10 @@
 
             <article class="card card card__transition">
 
-                <a href="" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="#" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                 <div class="card__info ">
-                    <a href="" class="card__infoContent">
+                    <a href="#" class="card__infoContent">
 
                         <h2 class="card__h2" >Interventoría</h2>
 
@@ -280,10 +280,10 @@
 
             <article class="card card card__transition">
 
-                <a href="" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="#" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                 <div class="card__info ">
-                    <a href="" class="card__infoContent">
+                    <a href="#" class="card__infoContent">
 
                         <h2 class="card__h2" >Interventoría</h2>
 
@@ -299,10 +299,10 @@
 
             <article class="card card card__transition">
 
-                <a href="" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="#" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                 <div class="card__info ">
-                    <a href="" class="card__infoContent">
+                    <a href="#" class="card__infoContent">
 
                         <h2 class="card__h2" >Interventoría</h2>
 
@@ -403,16 +403,7 @@
               </form>
             </div>
         </section>
-
-        <div id="modal-container" class="modal-hidden modal__style">
-            <div class="modal-content">
-                <button id="close-modal">X</button>
-                <!-- Contenido del modal, como la grid de imágenes -->
-                <div class="grid-container">
-                    <!-- Imágenes aquí -->
-                </div>
-            </div>
-        </div>
+        
 
     </main>
     
