I am doing chages in the style

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <img src="https://i.postimg.cc/W4dbZwN2/Dvp-logo-recortado.jpg" alt="Logo de la empresa">
         </a>
         <nav>
-            <a href="#home">Home</a>
+            <a href="#home" class="nav__a">Home</a>
             <a href="#dvp">Dvp</a>
             <a href="#servicios">Servicios</a>
             <a href="#experiencia">Experiencia</a>
@@ -223,10 +223,10 @@
 
             <article class="card card card__transition">
 
-                <a href="#" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="./complejoDManati.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                 <div class="card__info ">
-                    <a href="#" class="card__infoContent">
+                    <a href="./complejoDManati.html" class="card__infoContent">
 
                         <h2 class="card__h2" >Interventoría</h2>
 
@@ -242,10 +242,10 @@
 
             <article class="card card card__transition">
 
-                <a href="#" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="./drenesHorizontales.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                 <div class="card__info ">
-                    <a href="#" class="card__infoContent">
+                    <a href="./drenesHorizontales.html" class="card__infoContent">
 
                         <h2 class="card__h2" >Interventoría</h2>
 
@@ -261,10 +261,10 @@
 
             <article class="card card card__transition">
 
-                <a href="#" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="./manatiEstadio.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                 <div class="card__info ">
-                    <a href="#" class="card__infoContent">
+                    <a href="./manatiEstadio.html" class="card__infoContent">
 
                         <h2 class="card__h2" >Interventoría</h2>
 
@@ -280,10 +280,10 @@
 
             <article class="card card card__transition">
 
-                <a href="#" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="./muroTierraArmada.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                 <div class="card__info ">
-                    <a href="#" class="card__infoContent">
+                    <a href="./muroTierraArmada.html" class="card__infoContent">
 
                         <h2 class="card__h2" >Interventoría</h2>
 
@@ -299,10 +299,10 @@
 
             <article class="card card card__transition">
 
-                <a href="#" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="./placaHuella.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                 <div class="card__info ">
-                    <a href="#" class="card__infoContent">
+                    <a href="./placaHuella.html" class="card__infoContent">
 
                         <h2 class="card__h2" >Interventoría</h2>
 
@@ -318,10 +318,10 @@
 
             <article class="card card card__transition">
 
-                <a href="" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="./plazaPc.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                 <div class="card__info ">
-                    <a href="" class="card__infoContent">
+                    <a href="./plazaPc.html" class="card__infoContent">
 
                         <h2 class="card__h2" >Interventoría</h2>
 
@@ -337,10 +337,10 @@
 
             <article class="card card card__transition">
 
-                <a href="" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="./riohachaEstadio.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                 <div class="card__info ">
-                    <a href="" class="card__infoContent">
+                    <a href="./riohachaEstadio.html" class="card__infoContent">
 
                         <h2 class="card__h2" >Interventoría</h2>
 
@@ -356,10 +356,10 @@
 
             <article class="card card card__transition">
 
-                <a href="" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="./VarianteSabaLarga.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                 <div class="card__info ">
-                    <a href="" class="card__infoContent">
+                    <a href="./VarianteSabaLarga.html" class="card__infoContent">
 
                         <h2 class="card__h2" >Interventoría</h2>
 
@@ -411,7 +411,7 @@
     <footer class="footer">
         <div class="footer__column">
             <h3 class="footer__title">Información general</h3>
-            <p class="footer__content">Nit: 830.505.044-3</p>
+            <p class="footer__content">Nit: 901.386.206-5</p>
             <p class="footer__content">Ciudad: Barranquilla</p>
             <p class="footer__content">Aliado: Geointerventorias S.A.S</p>
         </div>
