I am doing the firts view

--- a/index.html
+++ b/index.html
@@ -58,12 +58,11 @@
 
     <main class="main" >
         <section class="main__section main__section--presentacion" id="home" >
-            <img src='https://i.postimg.cc/W4dbZwN2/Dvp-logo-recortado.jpg' alt='Dvp-logo-recortado' class="main__section--presentacion-logo"/>
-            <!-- <h1 class="main__section--presentacion--son">Diseños vias y pavimento</h1> -->
+            <h1 class="main__section--presentacion--son">Diseños vias y pavimento S.A.S</h1>
             <p class="main__section--presentacion--son">Servicio de interventorías, construcción, estudios y <br> diseños.</p>
             <a href="#contactos" class="contact-button main__section--presentacion--son">Contacto</a>
-            <iframe  class="youtube-video" src="https://www.youtube.com/embed/VzqUDTZexdA?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+            <!-- <iframe  class="youtube-video" src="https://www.youtube.com/embed/VzqUDTZexdA?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+            <div class="main__section--presentacion--background"></div>
         </section>
         
         <section class="main__section main__section--quienessomos" id="dvp">
