--- a/index.html
+++ b/index.html
@@ -43,27 +43,28 @@
 </head>
 <body>
 
-    <header>
-        <a class="contenedor-logo" href="./index.html">
-            <img src="https://i.ibb.co/QfFykHQ/Logo-Transparente2.png" alt="Logo de la empresa">
-        </a>
-        <nav>
-            <a href="#home" class="nav__a">Home</a>
-            <a href="#dvp" class="nav__a">Dvp</a>
-            <a href="#servicios" class="nav__a">Servicios</a>
-            <a href="#experiencia" class="nav__a">Experiencia</a>
-            <a href="#contactos" class="nav__a">Contacto</a>
-        </nav>
-    </header>
+    <section class="main__section main__section--presentacion" id="home" >
+        <header>
+            <a class="contenedor-logo" href="./index.html">
+                <img src="https://i.ibb.co/QfFykHQ/Logo-Transparente2.png" alt="Logo de la empresa">
+            </a>
+            <nav>
+                <a href="#home" class="nav__a">Home</a>
+                <a href="#dvp" class="nav__a">Dvp</a>
+                <a href="#servicios" class="nav__a">Servicios</a>
+                <a href="#experiencia" class="nav__a">Experiencia</a>
+                <a href="#contactos" class="nav__a">Contacto</a>
+            </nav>
+        </header>
+        <h1 class="main__section--presentacion--son">Diseños vias y pavimento S.A.S</h1>
+        <p class="main__section--presentacion--son">Servicio de interventorías, construcción, laboratorios estudios y <br> diseños.</p>
+        <a href="#contactos" class="contact-button main__section--presentacion--son">Contacto</a>
+        <!-- <iframe  class="youtube-video" src="https://www.youtube.com/embed/VzqUDTZexdA?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+        <div class="main__section--presentacion--background"></div>
+    </section>
 
     <main class="main" >
-        <section class="main__section main__section--presentacion" id="home" >
-            <h1 class="main__section--presentacion--son">Diseños vias y pavimento S.A.S</h1>
-            <p class="main__section--presentacion--son">Servicio de interventorías, construcción, estudios y <br> diseños.</p>
-            <a href="#contactos" class="contact-button main__section--presentacion--son">Contacto</a>
-            <!-- <iframe  class="youtube-video" src="https://www.youtube.com/embed/VzqUDTZexdA?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-            <div class="main__section--presentacion--background"></div>
-        </section>
+
         
         <section class="main__section main__section--quienessomos" id="dvp">
             <h2 class="main__section--quienessomos__title">Quiénes somos</h2>
