I finish quienes somos section

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <section class="main__section main__section--quienessomos" id="dvp">
             <h2 class="main__section--quienessomos__title">Quiénes somos</h2>
             <p class="main__section--quienessomos__description">Somos una empresa de ingeniería debidamente registrada en la Cámara de Comercio, con el objetivo principal de ofrecer nuestros servicios especializados en diseño vial, interventoría de obras, y análisis en laboratorio de suelos y pavimentos. Contamos con un equipo amplio de especialistas altamente cualificados en cada una de las áreas que servimos.</p>
-            <img src="https://media.istockphoto.com/id/996692544/es/foto/silueta-de-ingenier%C3%ADa-y-construcci%C3%B3n-equipo-trabajo-autopista-ir-a-ciudad-sobre-pastel-al.webp?s=1024x1024&w=is&k=20&c=DT5Rghu-BL1Ib_bXM9QtsppV5Snd2Nn6uS3aUiNvWbs=" alt="Ingeniería y construcción" class="main__section--quienessomos__image">
+            <img src="https://i.ibb.co/d4qpt3D/Whats-App-Image-2024-02-29-at-1-00-37-PM.jpg" alt="Foto del equipo principal de la empresa dvp" class="main__section--quienessomos__image">
         </section>
         
         <section class="main__section main__section--nuestros-servicios" id="servicios">
