I puted the images

--- a/index.html
+++ b/index.html
@@ -169,34 +169,13 @@
 
             <div class="empresas-fijo">Empresas que confían en DVP:</div>
             <div class="empresas-desplazamiento">
-                <span>Gobernación de Antioquia</span>
-                <span>Gobernación del Atlántico</span>
-                <span>INVIAS</span>
-                <span>Alcaldía de Barranquilla</span>
-                <span>Agencia Distrital de Infraestructura</span>
-                <span>Empresa de Desarrollo Urbano (EDU)</span>
-                <span>Mindeporte</span>
-                <span>Enterritorio</span>
-
-                <span>Gobernación de Antioquia</span>
-                <span>Gobernación del Atlántico</span>
-                <span>INVIAS</span>
-                <span>Alcaldía de Barranquilla</span>
-                <span>Agencia Distrital de Infraestructura</span>
-                <span>Empresa de Desarrollo Urbano (EDU)</span>
-                <span>Mindeporte</span>
-                <span>Enterritorio</span>
-
-                <span>Gobernación de Antioquia</span>
-                <span>Gobernación del Atlántico</span>
-                <span>INVIAS</span>
-                <span>Alcaldía de Barranquilla</span>
-                <span>Agencia Distrital de Infraestructura</span>
-                <span>Empresa de Desarrollo Urbano (EDU)</span>
-                <span>Mindeporte</span>
-                <span>Enterritorio</span>
-
-               
+                <span class="empresas-desplazamiento__span empresas-desplazamiento__span1"></span>
+                <span class="empresas-desplazamiento__span empresas-desplazamiento__span3"></span>
+                <span class="empresas-desplazamiento__span empresas-desplazamiento__span5"></span>
+                <span class="empresas-desplazamiento__span empresas-desplazamiento__span6"></span>
+                <span class="empresas-desplazamiento__span empresas-desplazamiento__span7"></span>
+                <span class="empresas-desplazamiento__span empresas-desplazamiento__span2"></span>
+                <span class="empresas-desplazamiento__span empresas-desplazamiento__span4"></span>
             </div>
         </section>
         
