--- a/arroyo91.html
+++ b/arroyo91.html
@@ -45,9 +45,9 @@
         <section class="grid-section">
             <!-- Ejemplo de elementos dentro de la grid -->
             <div class="grid-section__item"></div>
-            <div class="grid-section__item">2</div>
-            <div class="grid-section__item">3</div>
-            <div class="grid-section__item">4</div>
+            <div class="grid-section__item"></div>
+            <div class="grid-section__item"></div>
+            <div class="grid-section__item"></div>
             <!-- Agrega más elementos según sea necesario -->
         </section>
         <a href="index.html#experiencia" class="close-button">X</a>
