--- a/riohachaEstadio.html
+++ b/riohachaEstadio.html
@@ -44,10 +44,8 @@
     <main class="main--fotos">
         <section class="grid-section">
             <!-- Ejemplo de elementos dentro de la grid -->
-            <div class="grid-section__item"></div>
-            <div class="grid-section__item">2</div>
-            <div class="grid-section__item">3</div>
-            <div class="grid-section__item">4</div>
+            <div class="grid-section__item grid-section__item--estadioRioacha"></div>
+        
             <!-- Agrega más elementos según sea necesario -->
         </section>
         <a href="index.html#experiencia" class="close-button">X</a>
